Colab: OpenList upload progress + As-Task polling

--- a/colab_t4_setup.ipynb
+++ b/colab_t4_setup.ipynb
@@ -644,7 +644,7 @@
         "    except Exception:\n",
         "        return None\n",
         "\n",
-        "def alist_upload_file(base_url: str, token: str, local_path: Path, remote_dir: str, remote_name: str):\n",
+        "def alist_upload_file(base_url: str, token: str, local_path: Path, remote_dir: str, remote_name: str, as_task: bool = True):\n",
         "    url = f\"{base_url}/api/fs/form\"\n",
         "    remote_dir = remote_dir if str(remote_dir).startswith(\"/\") else \"/\" + str(remote_dir)\n",
         "    remote_path = remote_dir.rstrip(\"/\") + \"/\" + remote_name\n",
@@ -653,15 +653,45 @@
         "        \"Authorization\": token,\n",
         "        \"file-path\": file_path_header,\n",
         "    }\n",
+        "    if as_task:\n",
+        "        # 让服务端以“任务”方式处理（可避免反代等待远端存储上传导致 504 超时）\n",
+        "        headers[\"As-Task\"] = \"true\"\n",
         "\n",
         "    def _do_put(hdrs: dict):\n",
-        "        # 用 requests-toolbelt 流式 multipart 上传，避免把大文件一次性读进内存\n",
-        "        from requests_toolbelt.multipart.encoder import MultipartEncoder\n",
+        "        # 用 requests-toolbelt 流式 multipart 上传 + 进度条/速度\n",
+        "        import time\n",
+        "        from tqdm.auto import tqdm\n",
+        "        from requests_toolbelt.multipart.encoder import MultipartEncoder, MultipartEncoderMonitor\n",
         "        with local_path.open(\"rb\") as f:\n",
         "            encoder = MultipartEncoder(fields={\"file\": (remote_name, f, \"application/octet-stream\")})\n",
-        "            hdrs2 = dict(hdrs)\n",
-        "            hdrs2[\"Content-Type\"] = encoder.content_type\n",
-        "            return requests.put(url, headers=hdrs2, data=encoder, timeout=3600, verify=VERIFY_TLS)\n",
+            "            hdrs2 = dict(hdrs)\n",
+            "            hdrs2[\"Content-Type\"] = encoder.content_type\n",
+        "            hdrs2[\"Content-Length\"] = str(encoder.len)\n",
+        "\n",
+        "            bar = tqdm(total=encoder.len, unit=\"B\", unit_scale=True, unit_divisor=1024, desc=\"upload\")\n",
+        "            t0 = time.time()\n",
+        "            last_t = t0\n",
+        "            last_b = 0\n",
+        "\n",
+        "            def _cb(m: MultipartEncoderMonitor):\n",
+        "                nonlocal last_t, last_b\n",
+        "                cur = m.bytes_read\n",
+        "                if cur > bar.n:\n",
+        "                    bar.update(cur - bar.n)\n",
+        "                now = time.time()\n",
+        "                if now - last_t >= 0.5:\n",
+        "                    spd = (cur - last_b) / max(1e-6, (now - last_t))\n",
+        "                    bar.set_postfix_str(f\"{spd/1024/1024:.2f} MB/s\")\n",
+        "                    last_t = now\n",
+        "                    last_b = cur\n",
+        "\n",
+        "            monitor = MultipartEncoderMonitor(encoder, _cb)\n",
+        "            try:\n",
+        "                # 读超时设很大：避免上传大文件时本地 read timeout\n",
+        "                r = requests.put(url, headers=hdrs2, data=monitor, timeout=(30, 24 * 3600), verify=VERIFY_TLS)\n",
+        "            finally:\n",
+        "                bar.close()\n",
+        "            return r\n",
         "\n",
         "    r = _do_put(headers)\n",
         "    if r.status_code in (401, 403) and not str(headers.get(\"Authorization\", \"\")).lower().startswith(\"bearer \"):\n",
@@ -674,6 +704,56 @@
         "    if j.get(\"code\") != 200:\n",
         "        raise RuntimeError(f\"upload failed: {j}\")\n",
         "    return j\n",
+        "\n",
+        "\n",
+        "def alist_task_info(base_url: str, token: str, tid: str):\n",
+        "    url = f\"{base_url}/api/task/upload/info\"\n",
+        "    headers = {\"Authorization\": token}\n",
+        "    r = requests.post(url, headers=headers, params={\"tid\": tid}, timeout=30, verify=VERIFY_TLS)\n",
+        "    if r.status_code in (401, 403) and not str(headers.get(\"Authorization\", \"\")).lower().startswith(\"bearer \"):\n",
+        "        headers2 = dict(headers)\n",
+        "        headers2[\"Authorization\"] = f\"Bearer {token}\"\n",
+        "        r = requests.post(url, headers=headers2, params={\"tid\": tid}, timeout=30, verify=VERIFY_TLS)\n",
+        "    r.raise_for_status()\n",
+        "    return r.json()\n",
+        "\n",
+        "\n",
+        "def wait_upload_task(base_url: str, token: str, tid: str, poll_sec: float = 2.0, timeout_sec: int = 24 * 3600):\n",
+        "    import time\n",
+        "    from tqdm.auto import tqdm\n",
+        "    t0 = time.time()\n",
+        "    bar = tqdm(total=100, desc=\"server task\", unit=\"%\")\n",
+        "    last_p = 0\n",
+        "    try:\n",
+        "        while True:\n",
+        "            info = alist_task_info(base_url, token, tid)\n",
+        "            items = info.get(\"data\") or []\n",
+        "            task = items[0] if items else None\n",
+        "            if not task:\n",
+        "                raise RuntimeError(f\"task not found: {info}\")\n",
+        "            state = str(task.get(\"state\") or \"\")\n",
+        "            status = str(task.get(\"status\") or \"\")\n",
+        "            err = str(task.get(\"error\") or \"\")\n",
+        "            try:\n",
+        "                p = int(task.get(\"progress\") or 0)\n",
+        "            except Exception:\n",
+        "                p = 0\n",
+        "            p = max(0, min(100, p))\n",
+        "            if p > last_p:\n",
+        "                bar.update(p - last_p)\n",
+        "                last_p = p\n",
+        "            if status:\n",
+        "                bar.set_postfix_str(status[:60])\n",
+        "\n",
+        "            if state in (\"succeeded\", \"success\") or p >= 100:\n",
+        "                return task\n",
+        "            if state in (\"failed\", \"error\"):\n",
+        "                raise RuntimeError(f\"upload task failed: {err or task}\")\n",
+        "            if time.time() - t0 > timeout_sec:\n",
+        "                raise TimeoutError(f\"upload task timeout after {timeout_sec}s: {tid}\")\n",
+        "            time.sleep(poll_sec)\n",
+        "    finally:\n",
+        "        bar.close()\n",
         "\n",
         "if UPLOAD_TO_OPENLIST:\n",
         "    if not OPENLIST_BASE_URL:\n",
@@ -692,8 +772,15 @@
         "        alist_mkdir(OPENLIST_BASE_URL, token, REMOTE_DIR)\n",
         "\n",
         "    print(\"upload ...\", LOCAL_FILE, \"->\", REMOTE_DIR, REMOTE_FILENAME)\n",
-        "    res = alist_upload_file(OPENLIST_BASE_URL, token, LOCAL_FILE, REMOTE_DIR, REMOTE_FILENAME)\n",
-        "    print(\"upload ok:\", json.dumps(res, ensure_ascii=False))\n",
+        "    res = alist_upload_file(OPENLIST_BASE_URL, token, LOCAL_FILE, REMOTE_DIR, REMOTE_FILENAME, as_task=True)\n",
+        "    print(\"upload response:\", json.dumps(res, ensure_ascii=False))\n",
+        "    tid = (((res.get(\"data\") or {}) .get(\"task\") or {}) .get(\"id\")) if isinstance(res, dict) else None\n",
+        "    if tid:\n",
+        "        print(\"server task id:\", tid)\n",
+        "        final_task = wait_upload_task(OPENLIST_BASE_URL, token, tid)\n",
+        "        print(\"upload done:\", json.dumps(final_task, ensure_ascii=False))\n",
+        "    else:\n",
+        "        print(\"upload ok (no task id)\")\n",
         "\n",
         "# ====== 下载到本地（Colab）======\n",
         "# from google.colab import files\n",
