Colab/Client: improve ASR model loading wait

--- a/colab_t4_setup.ipynb
+++ b/colab_t4_setup.ipynb
@@ -129,6 +129,9 @@
         "# 备选示例：auto / en / zh / ja / ko / de / fr / es / ru / ar\n",
         "ASR_LANGUAGE = \"ja\"\n",
         "\n",
+        "# ASR 模型大小：large-v2 首次下载/加载很慢（可能10+分钟），卡住时可先改 medium\n",
+        "ASR_MODEL_SIZE = \"large-v2\"\n",
+        "\n",
         "config_text = f\"\"\"[API]\n",
         "deepseek_api_key =\n",
         "\n",
@@ -141,7 +144,7 @@
         "\n",
         "[Models]\n",
         "# 如果显存不够/加载太慢，可改：asr_model_size = small\n",
-        "asr_model_size = large-v2\n",
+        "asr_model_size = {ASR_MODEL_SIZE}\n",
         "\n",
         "# 翻译模型（不降精度）：默认 1.3B；如需更快可改为 600M\n",
         "translation_model = facebook/nllb-200-distilled-1.3B\n",
@@ -417,7 +420,7 @@
         "\n",
         "# soft：内封字幕（不转码，大小≈原视频；字幕清晰，推荐）\n",
         "# hard：硬字幕烧录（需要重编码；若原视频分辨率低，字幕会随视频一起被放大而显得不如外挂字幕清晰）\n",
-        "MODE = \"soft\"  # soft / hard\n",
+        "MODE = \"hard\"  # soft / hard\n",
         "\n",
         "if not VIDEO_PATH.exists():\n",
         "    raise FileNotFoundError(VIDEO_PATH)\n",
@@ -664,8 +667,8 @@
         "        from requests_toolbelt.multipart.encoder import MultipartEncoder, MultipartEncoderMonitor\n",
         "        with local_path.open(\"rb\") as f:\n",
         "            encoder = MultipartEncoder(fields={\"file\": (remote_name, f, \"application/octet-stream\")})\n",
-            "            hdrs2 = dict(hdrs)\n",
-            "            hdrs2[\"Content-Type\"] = encoder.content_type\n",
+        "            hdrs2 = dict(hdrs)\n",
+        "            hdrs2[\"Content-Type\"] = encoder.content_type\n",
         "            hdrs2[\"Content-Length\"] = str(encoder.len)\n",
         "\n",
         "            bar = tqdm(total=encoder.len, unit=\"B\", unit_scale=True, unit_divisor=1024, desc=\"upload\")\n",
