Config: use NLLB 1.3B non-distilled by default

--- a/colab_t4_setup.ipynb
+++ b/colab_t4_setup.ipynb
@@ -146,8 +146,8 @@
         "# 如果显存不够/加载太慢，可改：asr_model_size = small\n",
         "asr_model_size = {ASR_MODEL_SIZE}\n",
         "\n",
-        "# 翻译模型（不降精度）：默认 1.3B；如需更快可改为 600M\n",
-        "translation_model = facebook/nllb-200-distilled-1.3B\n",
+        "# 翻译模型：默认使用 NLLB 1.3B 非蒸馏版（质量更好）；如需更快可改为 distilled-1.3B / distilled-600M\n",
+        "translation_model = facebook/nllb-200-1.3B\n",
         "\n",
         "use_gpu = true\n",
         "beam_size = 5\n",
