Add ASS subtitles output and Colab ASS merge

--- a/colab_t4_setup.ipynb
+++ b/colab_t4_setup.ipynb
@@ -7,7 +7,7 @@
       "source": [
         "# video-translation-service（Colab + T4 GPU）一键安装运行\n",
         "\n",
-        "目标：从直链下载 `1.mp4` → 生成中文字幕 `1_zh.srt`（不启用润色）。\n",
+        "目标：从直链下载 `1.mp4` → 生成中文字幕 `1_zh.ass`（不启用润色）。\n",
         "\n",
         "注意：首次运行会下载 Whisper + 翻译模型（可能几 GB），需要等待一段时间。"
       ]
@@ -396,10 +396,12 @@
         "VIDEO_PATH = Path(globals().get(\"VIDEO_FILE\", \"1.mp4\"))\n",
         "print(\"video:\", VIDEO_PATH)\n",
         "\n",
-        "!python batch_translate.py \"{VIDEO_PATH}\" -t {TARGET_LANG} --translation-only\n",
+        "!python batch_translate.py \"{VIDEO_PATH}\" -t {TARGET_LANG} --translation-only --subtitle-format ass\n",
         "\n",
-        "SRT_PATH = VIDEO_PATH.with_name(f\"{VIDEO_PATH.stem}_{TARGET_LANG}.srt\")\n",
-        "print(\"srt:\", SRT_PATH)\n"
+        "SUB_PATH = VIDEO_PATH.with_name(f\"{VIDEO_PATH.stem}_{TARGET_LANG}.ass\")\n",
+        "globals()[\"TARGET_LANG\"] = TARGET_LANG\n",
+        "globals()[\"SUBTITLE_FILE\"] = str(SUB_PATH)\n",
+        "print(\"subtitle:\", SUB_PATH)\n"
       ]
     },
     {
@@ -416,18 +418,19 @@
         "\n",
         "VIDEO_PATH = Path(globals().get(\"VIDEO_FILE\", \"1.mp4\"))\n",
         "TARGET_LANG = globals().get(\"TARGET_LANG\", \"zh\")\n",
-        "SRT_PATH = VIDEO_PATH.with_name(f\"{VIDEO_PATH.stem}_{TARGET_LANG}.srt\")\n",
+        "\n",
+        "SUB_PATH = Path(globals().get(\"SUBTITLE_FILE\") or VIDEO_PATH.with_name(f\"{VIDEO_PATH.stem}_{TARGET_LANG}.ass\"))\n",
+        "SUB_EXT = SUB_PATH.suffix.lower()\n",
         "\n",
         "# soft：内封字幕（不转码，大小≈原视频；字幕清晰，推荐）\n",
-        "# hard：硬字幕烧录（需要重编码；若原视频分辨率低，字幕会随视频一起被放大而显得不如外挂字幕清晰）\n",
-        "MODE = \"hard\"  # soft / hard\n",
+        "#   - ASS 内封：MP4 不支持内封 ASS，因此会输出 MKV\n",
+        "# hard：硬字幕烧录（需要重编码；ASS 样式生效；编码质量决定清晰度/体积）\n",
+        "MODE = \"soft\"  # soft / hard\n",
         "\n",
         "if not VIDEO_PATH.exists():\n",
         "    raise FileNotFoundError(VIDEO_PATH)\n",
-        "if not SRT_PATH.exists():\n",
-        "    raise FileNotFoundError(SRT_PATH)\n",
-        "\n",
-        "OUT_PATH = VIDEO_PATH.with_name(f\"{VIDEO_PATH.stem}_{TARGET_LANG}_subbed{VIDEO_PATH.suffix or '.mp4'}\")\n",
+        "if not SUB_PATH.exists():\n",
+        "    raise FileNotFoundError(SUB_PATH)\n",
         "\n",
         "def ffprobe_json(path: Path) -> dict:\n",
         "    out = subprocess.check_output(\n",
@@ -447,38 +450,73 @@
         "    )\n",
         "    return json.loads(out)\n",
         "\n",
+        "cmd_nvenc = None\n",
+        "cmd_x264 = None\n",
+        "\n",
         "if MODE == \"soft\":\n",
         "    # 内封字幕：不重编码，文件大小基本不变（推荐）\n",
-        "    cmd = [\n",
-        "        \"ffmpeg\",\n",
-        "        \"-y\",\n",
-        "        \"-i\",\n",
-        "        str(VIDEO_PATH),\n",
-        "        \"-i\",\n",
-        "        str(SRT_PATH),\n",
-        "        \"-map\",\n",
-        "        \"0:v\",\n",
-        "        \"-map\",\n",
-        "        \"0:a?\",\n",
-        "        \"-map\",\n",
-        "        \"1:0\",\n",
-        "        \"-c:v\",\n",
-        "        \"copy\",\n",
-        "        \"-c:a\",\n",
-        "        \"copy\",\n",
-        "        \"-c:s\",\n",
-        "        \"mov_text\",\n",
-        "        \"-metadata:s:s:0\",\n",
-        "        \"language=chi\",\n",
-        "        \"-metadata:s:s:0\",\n",
-        "        \"title=Chinese\",\n",
-        "        \"-disposition:s:0\",\n",
-        "        \"default\",\n",
-        "        \"-movflags\",\n",
-        "        \"+faststart\",\n",
-        "        str(OUT_PATH),\n",
-        "    ]\n",
+        "    if SUB_EXT == \".ass\":\n",
+        "        OUT_PATH = VIDEO_PATH.with_name(f\"{VIDEO_PATH.stem}_{TARGET_LANG}_subbed.mkv\")\n",
+        "        cmd = [\n",
+        "            \"ffmpeg\",\n",
+        "            \"-y\",\n",
+        "            \"-i\",\n",
+        "            str(VIDEO_PATH),\n",
+        "            \"-i\",\n",
+        "            str(SUB_PATH),\n",
+        "            \"-map\",\n",
+        "            \"0:v\",\n",
+        "            \"-map\",\n",
+        "            \"0:a?\",\n",
+        "            \"-map\",\n",
+        "            \"1:0\",\n",
+        "            \"-c:v\",\n",
+        "            \"copy\",\n",
+        "            \"-c:a\",\n",
+        "            \"copy\",\n",
+        "            \"-c:s\",\n",
+        "            \"ass\",\n",
+        "            \"-metadata:s:s:0\",\n",
+        "            \"language=chi\",\n",
+        "            \"-metadata:s:s:0\",\n",
+        "            \"title=Chinese\",\n",
+        "            \"-disposition:s:0\",\n",
+        "            \"default\",\n",
+        "            str(OUT_PATH),\n",
+        "        ]\n",
+        "    else:\n",
+        "        OUT_PATH = VIDEO_PATH.with_name(f\"{VIDEO_PATH.stem}_{TARGET_LANG}_subbed{VIDEO_PATH.suffix or '.mp4'}\")\n",
+        "        cmd = [\n",
+        "            \"ffmpeg\",\n",
+        "            \"-y\",\n",
+        "            \"-i\",\n",
+        "            str(VIDEO_PATH),\n",
+        "            \"-i\",\n",
+        "            str(SUB_PATH),\n",
+        "            \"-map\",\n",
+        "            \"0:v\",\n",
+        "            \"-map\",\n",
+        "            \"0:a?\",\n",
+        "            \"-map\",\n",
+        "            \"1:0\",\n",
+        "            \"-c:v\",\n",
+        "            \"copy\",\n",
+        "            \"-c:a\",\n",
+        "            \"copy\",\n",
+        "            \"-c:s\",\n",
+        "            \"mov_text\",\n",
+        "            \"-metadata:s:s:0\",\n",
+        "            \"language=chi\",\n",
+        "            \"-metadata:s:s:0\",\n",
+        "            \"title=Chinese\",\n",
+        "            \"-disposition:s:0\",\n",
+        "            \"default\",\n",
+        "            \"-movflags\",\n",
+        "            \"+faststart\",\n",
+        "            str(OUT_PATH),\n",
+        "        ]\n",
         "else:\n",
+        "    OUT_PATH = VIDEO_PATH.with_name(f\"{VIDEO_PATH.stem}_{TARGET_LANG}_subbed{VIDEO_PATH.suffix or '.mp4'}\")\n",
         "    # 硬字幕：会重编码；为了让体积接近原视频，按原视频码率做 ABR（并略加一点给字幕边缘）\n",
         "    info = ffprobe_json(VIDEO_PATH)\n",
         "    height = None\n",
@@ -501,21 +539,25 @@
         "        size = 0\n",
         "    if not v_bitrate and duration > 0 and size > 0:\n",
         "        v_bitrate = int(size * 8 / duration)  # 退化估算（包含音频，足够用来控体积）\n",
-        "    target_k = int((v_bitrate or 800_000) / 1000 * 1.15)  # 给字幕边缘留一点余量\n",
+        "    target_k = int((v_bitrate or 800_000) / 1000 * 1.05)  # 轻微余量\n",
         "\n",
-        "    if not height:\n",
-        "        height = 720\n",
-        "    font_size = min(60, max(24, int(height * 0.06)))\n",
-        "    outline = max(2, int(font_size / 16))\n",
-        "    margin_v = max(20, int(font_size * 1.2))\n",
+        "    if SUB_EXT == \".ass\":\n",
+        "        # ASS 直接走 libass（样式以 ASS 为准）\n",
+        "        vf = f\"ass={SUB_PATH.as_posix()}:fontsdir=/usr/share/fonts\"\n",
+        "    else:\n",
+        "        if not height:\n",
+        "            height = 720\n",
+        "        font_size = min(60, max(24, int(height * 0.06)))\n",
+        "        outline = max(2, int(font_size / 16))\n",
+        "        margin_v = max(20, int(font_size * 1.2))\n",
         "\n",
-        "    style = (\n",
-        "        f\"FontName=Noto Sans CJK SC,\"\n",
-        "        f\"FontSize={font_size},Bold=1,\"\n",
-        "        f\"Outline={outline},Shadow=0,\"\n",
-        "        f\"MarginV={margin_v},Alignment=2\"\n",
-        "    )\n",
-        "    vf = f\"subtitles={SRT_PATH.as_posix()}:charenc=UTF-8:fontsdir=/usr/share/fonts:force_style='{style}'\"\n",
+        "        style = (\n",
+        "            f\"FontName=Noto Sans CJK SC,\"\n",
+        "            f\"FontSize={font_size},Bold=1,\"\n",
+        "            f\"Outline={outline},Shadow=0,\"\n",
+        "            f\"MarginV={margin_v},Alignment=2\"\n",
+        "        )\n",
+        "        vf = f\"subtitles={SUB_PATH.as_posix()}:charenc=UTF-8:fontsdir=/usr/share/fonts:force_style='{style}'\"\n",
         "\n",
         "    encoders = subprocess.check_output(\n",
         "        [\"ffmpeg\", \"-hide_banner\", \"-encoders\"],\n",
@@ -587,6 +629,7 @@
         "        subprocess.run(cmd, check=True)\n",
         "    else:\n",
         "        raise\n",
+        "globals()[\"SUBBED_FILE\"] = str(OUT_PATH)\n",
         "print(\"OK:\", OUT_PATH)\n"
       ]
     },
@@ -608,9 +651,9 @@
         "# ====== 本地文件（由前面步骤生成）======\n",
         "VIDEO_PATH = Path(globals().get(\"VIDEO_FILE\", \"1.mp4\"))\n",
         "TARGET_LANG = globals().get(\"TARGET_LANG\", \"zh\")\n",
-        "SRT_FILE = VIDEO_PATH.with_name(f\"{VIDEO_PATH.stem}_{TARGET_LANG}.srt\")\n",
-        "LOCAL_FILE = VIDEO_PATH.with_name(f\"{VIDEO_PATH.stem}_{TARGET_LANG}_subbed{VIDEO_PATH.suffix or '.mp4'}\")\n",
-        "print(\"local srt:\", SRT_FILE)\n",
+        "SUB_FILE = Path(globals().get(\"SUBTITLE_FILE\") or VIDEO_PATH.with_name(f\"{VIDEO_PATH.stem}_{TARGET_LANG}.ass\"))\n",
+        "LOCAL_FILE = Path(globals().get(\"SUBBED_FILE\") or VIDEO_PATH.with_name(f\"{VIDEO_PATH.stem}_{TARGET_LANG}_subbed{VIDEO_PATH.suffix or '.mp4'}\"))\n",
+        "print(\"local subtitle:\", SUB_FILE)\n",
         "print(\"local video:\", LOCAL_FILE)\n",
         "\n",
         "# ====== OpenList/AList 上传配置（Colab Secrets/userdata）======\n",
@@ -788,7 +831,7 @@
         "# ====== 下载到本地（Colab）======\n",
         "# from google.colab import files\n",
         "\n",
-        "# files.download(str(SRT_FILE))\n",
+        "# files.download(str(SUB_FILE))\n",
         "# files.download(str(LOCAL_FILE))\n"
       ]
     },
