Colab: unify video/subtitle names and copy outputs

--- a/colab_t4_setup.ipynb
+++ b/colab_t4_setup.ipynb
@@ -421,6 +421,7 @@
         "\n",
         "SUB_PATH = Path(globals().get(\"SUBTITLE_FILE\") or VIDEO_PATH.with_name(f\"{VIDEO_PATH.stem}_{TARGET_LANG}.ass\"))\n",
         "SUB_EXT = SUB_PATH.suffix.lower()\n",
+        "BASE_STEM = f\"{VIDEO_PATH.stem}_{TARGET_LANG}\"\n",
         "\n",
         "# soft：内封字幕（不转码，大小≈原视频；字幕清晰，推荐）\n",
         "#   - ASS 内封：MP4 不支持内封 ASS，因此会输出 MKV\n",
@@ -456,7 +457,7 @@
         "if MODE == \"soft\":\n",
         "    # 内封字幕：不重编码，文件大小基本不变（推荐）\n",
         "    if SUB_EXT == \".ass\":\n",
-        "        OUT_PATH = VIDEO_PATH.with_name(f\"{VIDEO_PATH.stem}_{TARGET_LANG}_subbed.mkv\")\n",
+        "        OUT_PATH = VIDEO_PATH.with_name(f\"{BASE_STEM}.mkv\")\n",
         "        cmd = [\n",
         "            \"ffmpeg\",\n",
         "            \"-y\",\n",
@@ -485,7 +486,7 @@
         "            str(OUT_PATH),\n",
         "        ]\n",
         "    else:\n",
-        "        OUT_PATH = VIDEO_PATH.with_name(f\"{VIDEO_PATH.stem}_{TARGET_LANG}_subbed{VIDEO_PATH.suffix or '.mp4'}\")\n",
+        "        OUT_PATH = VIDEO_PATH.with_name(f\"{BASE_STEM}{VIDEO_PATH.suffix or '.mp4'}\")\n",
         "        cmd = [\n",
         "            \"ffmpeg\",\n",
         "            \"-y\",\n",
@@ -516,7 +517,7 @@
         "            str(OUT_PATH),\n",
         "        ]\n",
         "else:\n",
-        "    OUT_PATH = VIDEO_PATH.with_name(f\"{VIDEO_PATH.stem}_{TARGET_LANG}_subbed{VIDEO_PATH.suffix or '.mp4'}\")\n",
+        "    OUT_PATH = VIDEO_PATH.with_name(f\"{BASE_STEM}{VIDEO_PATH.suffix or '.mp4'}\")\n",
         "    # 硬字幕：会重编码；为了让体积接近原视频，按原视频码率做 ABR（并略加一点给字幕边缘）\n",
         "    info = ffprobe_json(VIDEO_PATH)\n",
         "    height = None\n",
@@ -629,8 +630,26 @@
         "        subprocess.run(cmd, check=True)\n",
         "    else:\n",
         "        raise\n",
-        "globals()[\"SUBBED_FILE\"] = str(OUT_PATH)\n",
-        "print(\"OK:\", OUT_PATH)\n"
+        "import shutil\n",
+        "\n",
+        "# 让字幕和视频同名（仅扩展名不同）\n",
+        "FINAL_SUB_PATH = OUT_PATH.with_suffix(SUB_EXT)\n",
+        "if FINAL_SUB_PATH != SUB_PATH:\n",
+        "    shutil.copy2(SUB_PATH, FINAL_SUB_PATH)\n",
+        "    SUB_PATH = FINAL_SUB_PATH\n",
+        "\n",
+        "# 复制到指定目录（可改路径）\n",
+        "EXPORT_DIR = Path(\"/content/out\")\n",
+        "EXPORT_DIR.mkdir(parents=True, exist_ok=True)\n",
+        "dst_video = EXPORT_DIR / OUT_PATH.name\n",
+        "dst_sub = EXPORT_DIR / f\"{dst_video.stem}{SUB_EXT}\"\n",
+        "shutil.copy2(OUT_PATH, dst_video)\n",
+        "shutil.copy2(SUB_PATH, dst_sub)\n",
+        "\n",
+        "globals()[\"SUBBED_FILE\"] = str(dst_video)\n",
+        "globals()[\"SUBTITLE_FILE\"] = str(dst_sub)\n",
+        "print(\"OK:\", dst_video)\n",
+        "print(\"OK:\", dst_sub)\n"
       ]
     },
     {
@@ -652,7 +671,7 @@
         "VIDEO_PATH = Path(globals().get(\"VIDEO_FILE\", \"1.mp4\"))\n",
         "TARGET_LANG = globals().get(\"TARGET_LANG\", \"zh\")\n",
         "SUB_FILE = Path(globals().get(\"SUBTITLE_FILE\") or VIDEO_PATH.with_name(f\"{VIDEO_PATH.stem}_{TARGET_LANG}.ass\"))\n",
-        "LOCAL_FILE = Path(globals().get(\"SUBBED_FILE\") or VIDEO_PATH.with_name(f\"{VIDEO_PATH.stem}_{TARGET_LANG}_subbed{VIDEO_PATH.suffix or '.mp4'}\"))\n",
+        "LOCAL_FILE = Path(globals().get(\"SUBBED_FILE\") or VIDEO_PATH.with_name(f\"{VIDEO_PATH.stem}_{TARGET_LANG}{VIDEO_PATH.suffix or '.mp4'}\"))\n",
         "print(\"local subtitle:\", SUB_FILE)\n",
         "print(\"local video:\", LOCAL_FILE)\n",
         "\n",
