Colab: split copy step and move upload/stop to backup

--- a/colab_t4_setup.ipynb
+++ b/colab_t4_setup.ipynb
@@ -630,26 +630,51 @@
         "        subprocess.run(cmd, check=True)\n",
         "    else:\n",
         "        raise\n",
+        "globals()[\"SUBBED_FILE\"] = str(OUT_PATH)\n",
+        "globals()[\"SUBTITLE_FILE\"] = str(SUB_PATH)\n",
+        "print(\"OK video:\", OUT_PATH)\n",
+        "print(\"OK subtitle:\", SUB_PATH)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "c0ffee10",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#@title 10) 复制最终视频+字幕到目录\n",
+        "from pathlib import Path\n",
         "import shutil\n",
         "\n",
-        "# 让字幕和视频同名（仅扩展名不同）\n",
-        "FINAL_SUB_PATH = OUT_PATH.with_suffix(SUB_EXT)\n",
-        "if FINAL_SUB_PATH != SUB_PATH:\n",
-        "    shutil.copy2(SUB_PATH, FINAL_SUB_PATH)\n",
-        "    SUB_PATH = FINAL_SUB_PATH\n",
-        "\n",
-        "# 复制到指定目录（可改路径）\n",
+        "# 复制目标目录（可改）\n",
         "EXPORT_DIR = Path(\"/content/out\")\n",
         "EXPORT_DIR.mkdir(parents=True, exist_ok=True)\n",
-        "dst_video = EXPORT_DIR / OUT_PATH.name\n",
-        "dst_sub = EXPORT_DIR / f\"{dst_video.stem}{SUB_EXT}\"\n",
-        "shutil.copy2(OUT_PATH, dst_video)\n",
-        "shutil.copy2(SUB_PATH, dst_sub)\n",
+        "\n",
+        "video = Path(globals().get(\"SUBBED_FILE\", \"\"))\n",
+        "sub = Path(globals().get(\"SUBTITLE_FILE\", \"\"))\n",
+        "\n",
+        "if not video.exists():\n",
+        "    raise FileNotFoundError(video)\n",
+        "if not sub.exists():\n",
+        "    raise FileNotFoundError(sub)\n",
+        "\n",
+        "# 让字幕和视频同名（仅扩展名不同）\n",
+        "sub_ext = (sub.suffix or \".ass\").lower()\n",
+        "aligned_sub = video.with_suffix(sub_ext)\n",
+        "if aligned_sub != sub:\n",
+        "    shutil.copy2(sub, aligned_sub)\n",
+        "    sub = aligned_sub\n",
+        "\n",
+        "dst_video = EXPORT_DIR / video.name\n",
+        "dst_sub = EXPORT_DIR / f\"{dst_video.stem}{sub_ext}\"\n",
+        "shutil.copy2(video, dst_video)\n",
+        "shutil.copy2(sub, dst_sub)\n",
         "\n",
         "globals()[\"SUBBED_FILE\"] = str(dst_video)\n",
         "globals()[\"SUBTITLE_FILE\"] = str(dst_sub)\n",
-        "print(\"OK:\", dst_video)\n",
-        "print(\"OK:\", dst_sub)\n"
+        "print(\"copied video:\", dst_video)\n",
+        "print(\"copied subtitle:\", dst_sub)\n"
       ]
     },
     {
@@ -659,7 +684,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "#@title 10) 上传到 OpenList/AList（可选） + 下载文件\n",
+        "#@title （备用）上传到 OpenList/AList（可选） + 下载文件\n",
         "import json\n",
         "from pathlib import Path\n",
         "from urllib.parse import quote\n",
@@ -861,7 +886,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "#@title 11) （可选）停止服务\n",
+        "#@title （备用）停止服务\n",
         "import os\n",
         "import signal\n",
         "import pathlib\n",
