Colab: add subtitle linger fix config knobs

--- a/colab_t4_setup.ipynb
+++ b/colab_t4_setup.ipynb
@@ -132,6 +132,17 @@
         "# ASR 模型大小：large-v2 首次下载/加载很慢（可能10+分钟），卡住时可先改 medium\n",
         "ASR_MODEL_SIZE = \"large-v2\"\n",
         "\n",
+        "# 字幕时间轴修复（避免长静音字幕滞留/提前结束）\n",
+        "SUBTITLE_FORMAT = \"ass\"  # srt / ass\n",
+        "SUBTITLE_FIX_LINGER = True\n",
+        "SUBTITLE_MIN_DURATION_SEC = 1.2\n",
+        "SUBTITLE_MAX_DURATION_SEC = 20.0\n",
+        "SUBTITLE_CHARS_PER_SEC = 5.0\n",
+        "SUBTITLE_LINGER_SLACK_SEC = 0.8\n",
+        "SUBTITLE_LINGER_TRIGGER_SEC = 6.0\n",
+        "SUBTITLE_LINGER_TRIGGER_RATIO = 6.0\n",
+        "SUBTITLE_LINGER_KEEP_RATIO = 4.0\n",
+        "\n",
         "config_text = f\"\"\"[API]\n",
         "deepseek_api_key =\n",
         "\n",
@@ -168,6 +179,17 @@
         "[Translation]\n",
         "default_target_language = zh\n",
         "use_deepseek_polish = false\n",
+        "\n",
+        "[Subtitles]\n",
+        "format = {SUBTITLE_FORMAT}\n",
+        "fix_linger = {str(SUBTITLE_FIX_LINGER).lower()}\n",
+        "min_duration_sec = {SUBTITLE_MIN_DURATION_SEC}\n",
+        "max_duration_sec = {SUBTITLE_MAX_DURATION_SEC}\n",
+        "chars_per_sec = {SUBTITLE_CHARS_PER_SEC}\n",
+        "linger_slack_sec = {SUBTITLE_LINGER_SLACK_SEC}\n",
+        "linger_trigger_sec = {SUBTITLE_LINGER_TRIGGER_SEC}\n",
+        "linger_trigger_ratio = {SUBTITLE_LINGER_TRIGGER_RATIO}\n",
+        "linger_keep_ratio = {SUBTITLE_LINGER_KEEP_RATIO}\n",
         "\n",
         "[Audio]\n",
         "# 人声分离（Demucs）：改善背景音乐/嘈杂场景识别\n",
