Colab: document subtitle linger config knobs

--- a/colab_t4_setup.ipynb
+++ b/colab_t4_setup.ipynb
@@ -132,16 +132,17 @@
         "# ASR 模型大小：large-v2 首次下载/加载很慢（可能10+分钟），卡住时可先改 medium\n",
         "ASR_MODEL_SIZE = \"large-v2\"\n",
         "\n",
-        "# 字幕时间轴修复（避免长静音字幕滞留/提前结束）\n",
-        "SUBTITLE_FORMAT = \"ass\"  # srt / ass\n",
-        "SUBTITLE_FIX_LINGER = True\n",
-        "SUBTITLE_MIN_DURATION_SEC = 1.2\n",
-        "SUBTITLE_MAX_DURATION_SEC = 20.0\n",
-        "SUBTITLE_CHARS_PER_SEC = 5.0\n",
-        "SUBTITLE_LINGER_SLACK_SEC = 0.8\n",
-        "SUBTITLE_LINGER_TRIGGER_SEC = 6.0\n",
-        "SUBTITLE_LINGER_TRIGGER_RATIO = 6.0\n",
-        "SUBTITLE_LINGER_KEEP_RATIO = 4.0\n",
+        "# 字幕时间轴修复（避免长静音字幕滞留；参数太激进可能导致字幕提前结束）\n",
+        "# 一般无需改动；若字幕提前结束：先把 SUBTITLE_LINGER_KEEP_RATIO 调大（例如 6），或直接 SUBTITLE_FIX_LINGER=False。\n",
+        "SUBTITLE_FORMAT = \"ass\"  # 字幕格式：srt / ass（推荐 ass）\n",
+        "SUBTITLE_FIX_LINGER = True  # True=启用“滞留修复”；False=完全按 ASR 原始时间轴输出\n",
+        "SUBTITLE_MIN_DURATION_SEC = 1.2  # 单条字幕最短显示秒数（避免一闪而过）\n",
+        "SUBTITLE_MAX_DURATION_SEC = 20.0  # 单条字幕最长显示秒数（用于限制长静音滞留）\n",
+        "SUBTITLE_CHARS_PER_SEC = 5.0  # 阅读速度估算：每秒字符数（越大越快->字幕更短）\n",
+        "SUBTITLE_LINGER_SLACK_SEC = 0.8  # 容忍额外时长（秒），减少误判\n",
+        "SUBTITLE_LINGER_TRIGGER_SEC = 6.0  # 仅当原始持续时间>=该值才考虑收缩\n",
+        "SUBTITLE_LINGER_TRIGGER_RATIO = 6.0  # 仅当 原始时长 > 可读时长*ratio 才触发（越大越不容易触发）\n",
+        "SUBTITLE_LINGER_KEEP_RATIO = 4.0  # 触发后保留：可读时长*ratio（越大越不容易提前结束）\n",
         "\n",
         "config_text = f\"\"\"[API]\n",
         "deepseek_api_key =\n",
