Default ASR to ReazonSpeech

--- a/colab_t4_setup.ipynb
+++ b/colab_t4_setup.ipynb
@@ -20,7 +20,7 @@
       "outputs": [],
       "source": [
         "# 直接把你的直链贴到这里即可\n",
-        "VIDEO_URL = \"https://oplist.mae5.com/d/本地存储/1.mp4?sign=b58L3c5JYGAMNwLcO09asS9CV8aHTlGBXiO3Yi8Pe0Y=:0\""
+        "VIDEO_URL = \"https://xxx.com/d/存储/1.mp4\""
       ]
     },
     {
@@ -129,8 +129,9 @@
         "# 备选示例：auto / en / zh / ja / ko / de / fr / es / ru / ar\n",
         "ASR_LANGUAGE = \"ja\"\n",
         "\n",
-        "# ASR 模型大小：large-v2 首次下载/加载很慢（可能10+分钟），卡住时可先改 medium\n",
-        "ASR_MODEL_SIZE = \"large-v2\"\n",
+        "# ASR 模型：默认 reazonspeech（日语优化，transformers 后端）\n",
+        "# 其它语言可改为 medium / large-v3；或自定义：reazonspeech:HF模型名\n",
+        "ASR_MODEL_SIZE = \"reazonspeech\"\n",
         "\n",
         "# 字幕时间轴修复（避免长静音字幕滞留；参数太激进可能导致字幕提前结束）\n",
         "# 一般无需改动；若字幕提前结束：先把 SUBTITLE_LINGER_KEEP_RATIO 调大（例如 6），或直接 SUBTITLE_FIX_LINGER=False。\n",
@@ -140,7 +141,7 @@
         "SUBTITLE_MAX_DURATION_SEC = 20.0  # 单条字幕最长显示秒数（用于限制长静音滞留）\n",
         "SUBTITLE_CHARS_PER_SEC = 5.0  # 阅读速度估算：每秒字符数（越大越快->字幕更短）\n",
         "SUBTITLE_LINGER_SLACK_SEC = 0.8  # 容忍额外时长（秒），减少误判\n",
-        "SUBTITLE_LINGER_TRIGGER_SEC = 6.0  # 仅当原始持续时间>=该值才考虑收缩\n",
+        "SUBTITLE_LINGER_TRIGGER_SEC = 10.0  # 仅当原始持续时间>=该值才考虑收缩\n",
         "SUBTITLE_LINGER_TRIGGER_RATIO = 6.0  # 仅当 原始时长 > 可读时长*ratio 才触发（越大越不容易触发）\n",
         "SUBTITLE_LINGER_KEEP_RATIO = 4.0  # 触发后保留：可读时长*ratio（越大越不容易提前结束）\n",
         "\n",
@@ -671,7 +672,7 @@
         "import shutil\n",
         "\n",
         "# 复制目标目录（可改）\n",
-        "EXPORT_DIR = Path(\"/content/out\")\n",
+        "EXPORT_DIR = Path(\"/content/drive/MyDrive/share\")\n",
         "EXPORT_DIR.mkdir(parents=True, exist_ok=True)\n",
         "\n",
         "video = Path(globals().get(\"SUBBED_FILE\", \"\"))\n",
