Add transformers ASR chunking controls

--- a/colab_t4_setup.ipynb
+++ b/colab_t4_setup.ipynb
@@ -121,6 +121,11 @@
         "ASR_CHUNK_SEC = 900\n",
         "ASR_CHUNK_OVERLAP_SEC = 1.0\n",
         "\n",
+        "# ReazonSpeech/transformers 内部分块（仅对 transformers 后端生效）\n",
+        "# 默认 30s/5s 可显著降低长音频 OOM/掉线风险；如稳定可调大或设 0 禁用\n",
+        "ASR_TRANSFORMERS_CHUNK_SEC = 30\n",
+        "ASR_TRANSFORMERS_STRIDE_SEC = 5.0\n",
+        "\n",
         "# Demucs 人声分离分段秒数（仅对超长/超大音频触发；越大越不容易出现边界接缝，但越吃内存）\n",
         "# 如果仍然 OOM，可降到 600/300；如果视频特别长但内存足够，可升到 3600。\n",
         "DEMUCS_CHUNK_SEC = 1800\n",
@@ -177,6 +182,10 @@
         "chunk_sec = {ASR_CHUNK_SEC if ENABLE_ASR_CHUNKING else 0}\n",
         "# 重叠一点点，避免切在单词中间（会产生少量重复，程序会尽量去重）\n",
         "chunk_overlap_sec = {ASR_CHUNK_OVERLAP_SEC}\n",
+        "\n",
+        "# transformers 内部分块（仅对 reazonspeech/transformers 后端生效）\n",
+        "transformers_chunk_sec = {ASR_TRANSFORMERS_CHUNK_SEC}\n",
+        "transformers_stride_sec = {ASR_TRANSFORMERS_STRIDE_SEC}\n",
         "\n",
         "[Translation]\n",
         "default_target_language = zh\n",
