Use Sakura 4B Qwen3 base model

--- a/colab_t4_setup.ipynb
+++ b/colab_t4_setup.ipynb
@@ -164,8 +164,8 @@
         "# 如果显存不够/加载太慢，可改：asr_model_size = small\n",
         "asr_model_size = {ASR_MODEL_SIZE}\n",
         "\n",
-        "# 翻译模型：默认使用 Sakura LLM（日->中更好，显存占用更高）；如显存不够可改为 nllb-200-distilled-1.3B\n",
-        "translation_model = SakuraLLM/Sakura-7B\n",
+        "# 翻译模型：默认使用 Sakura LLM（日->中更好，显存占用较低）；如显存不够可改为 nllb-200-distilled-1.3B\n",
+        "translation_model = SakuraLLM/Sakura-4B-Qwen3-Base-v2\n",
         "\n",
         "use_gpu = true\n",
         "beam_size = 5\n",
