--- a/colab_t4_setup.ipynb
+++ b/colab_t4_setup.ipynb
@@ -101,7 +101,10 @@
         "!python -m pip install torchcodec\n",
         "\n",
         "# OpenList/AList 大文件上传：requests 默认 multipart 会把文件读进内存，需用 requests-toolbelt 流式上传\n",
-        "!python -m pip install requests-toolbelt\n"
+        "!python -m pip install requests-toolbelt\n",
+        "\n",
+        "# GGUF/llama.cpp 翻译（默认模型为 GGUF 时需要，CPU 也可用）\n",
+        "!CMAKE_ARGS=\"-DLLAMA_CUBLAS=on\" FORCE_CMAKE=1 python -m pip install llama-cpp-python\n"
       ]
     },
     {
@@ -164,8 +167,8 @@
         "# 如果显存不够/加载太慢，可改：asr_model_size = small\n",
         "asr_model_size = {ASR_MODEL_SIZE}\n",
         "\n",
-        "# 翻译模型：默认使用 Sakura LLM（日->中更好，显存占用较低）；如显存不够可改为 nllb-200-distilled-1.3B；GGUF 用法：gguf:/path/to/model.gguf（需安装 llama-cpp-python）\n",
-        "translation_model = SakuraLLM/Sakura-4B-Qwen3-Base-v2\n",
+        "# 翻译模型：默认使用 GGUF 量化（T4 更稳）；如显存不够可改为 nllb-200-distilled-1.3B；GGUF 用法：gguf:/path/to/model.gguf（需安装 llama-cpp-python）\n",
+        "translation_model = gguf:hf:SakuraLLM/Sakura-7B-Qwen2.5-v1.0-GGUF@sakura-7b-qwen2.5-v1.0-iq4xs.gguf\n",
         "\n",
         "use_gpu = true\n",
         "beam_size = 5\n",
