Fix GGUF install steps in Colab

--- a/colab_t4_setup.ipynb
+++ b/colab_t4_setup.ipynb
@@ -77,7 +77,7 @@
       "source": [
         "#@title 2) 安装系统依赖（ffmpeg + 字体）\n",
         "!apt-get update -y\n",
-        "!apt-get install -y ffmpeg fonts-noto-cjk libsndfile1\n",
+        "!apt-get install -y ffmpeg fonts-noto-cjk libsndfile1 build-essential cmake ninja-build\n",
         "!ffmpeg -version | head -n 2\n"
       ]
     },
@@ -104,7 +104,8 @@
         "!python -m pip install requests-toolbelt\n",
         "\n",
         "# GGUF/llama.cpp 翻译（默认模型为 GGUF 时需要，CPU 也可用）\n",
-        "!CMAKE_ARGS=\"-DLLAMA_CUBLAS=on\" FORCE_CMAKE=1 python -m pip install llama-cpp-python\n"
+        "!MAX_JOBS=2 CMAKE_ARGS=\"-DGGML_CUDA=on -DCMAKE_CUDA_ARCHITECTURES=75\" FORCE_CMAKE=1 python -m pip install llama-cpp-python --no-cache-dir -v\n",
+        "# 如果编译失败，可改用 CPU 版：!python -m pip install llama-cpp-python --no-cache-dir -v\n"
       ]
     },
     {
