Cache llama-cpp-python wheel in Colab

--- a/colab_t4_setup.ipynb
+++ b/colab_t4_setup.ipynb
@@ -104,7 +104,8 @@
         "!python -m pip install requests-toolbelt\n",
         "\n",
         "# GGUF/llama.cpp 翻译（默认模型为 GGUF 时需要，CPU 也可用）\n",
-        "!MAX_JOBS=2 CMAKE_ARGS=\"-DGGML_CUDA=on -DCMAKE_CUDA_ARCHITECTURES=75\" FORCE_CMAKE=1 python -m pip install llama-cpp-python --no-cache-dir -v\n",
+        "# wheel 会保存在 /content/llama_wheels，便于上传复用\n",
+        "!bash -lc 'LLAMA_WHEEL_DIR=/content/llama_wheels; mkdir -p \"$LLAMA_WHEEL_DIR\"; if ls \"$LLAMA_WHEEL_DIR\"/llama_cpp_python-*.whl >/dev/null 2>&1; then python -m pip install \"$LLAMA_WHEEL_DIR\"/llama_cpp_python-*.whl; else MAX_JOBS=2 CMAKE_ARGS=\"-DGGML_CUDA=on -DCMAKE_CUDA_ARCHITECTURES=75\" FORCE_CMAKE=1 python -m pip wheel llama-cpp-python -w \"$LLAMA_WHEEL_DIR\" -v; python -m pip install \"$LLAMA_WHEEL_DIR\"/llama_cpp_python-*.whl; fi'\n",
         "# 如果编译失败，可改用 CPU 版：!python -m pip install llama-cpp-python --no-cache-dir -v\n"
       ]
     },
@@ -734,6 +735,11 @@
         "TARGET_LANG = globals().get(\"TARGET_LANG\", \"zh\")\n",
         "SUB_FILE = Path(globals().get(\"SUBTITLE_FILE\") or VIDEO_PATH.with_name(f\"{VIDEO_PATH.stem}_{TARGET_LANG}.ass\"))\n",
         "LOCAL_FILE = Path(globals().get(\"SUBBED_FILE\") or VIDEO_PATH.with_name(f\"{VIDEO_PATH.stem}_{TARGET_LANG}{VIDEO_PATH.suffix or '.mp4'}\"))\n",
+        "UPLOAD_FILE_OVERRIDE = \"\"  # 例如 /content/llama_wheels/llama_cpp_python-*.whl\n",
+        "if UPLOAD_FILE_OVERRIDE:\n",
+        "    import glob\n",
+        "    matches = glob.glob(UPLOAD_FILE_OVERRIDE)\n",
+        "    LOCAL_FILE = Path(matches[0]) if matches else Path(UPLOAD_FILE_OVERRIDE)\n",
         "print(\"local subtitle:\", SUB_FILE)\n",
         "print(\"local video:\", LOCAL_FILE)\n",
         "\n",
