Improve ASR fallback for vocal separation

--- a/colab_t4_setup.ipynb
+++ b/colab_t4_setup.ipynb
@@ -150,7 +150,7 @@
     "# 如果仍然 OOM，可降到 600/300；如果视频特别长但内存足够，可升到 3600。\n",
     "DEMUCS_CHUNK_SEC = 1800\n",
     "\n",
-    "# 人声+混音融合比例（0=仅人声；0.2=加入20%原始混音，减少漏词/空洞）\n",
+    "# 人声+混音融合比例（回退时用于补齐空洞；0=仅人声）\n",
     "# 建议范围：0.1 ~ 0.4；越大越接近原音（噪声也会更多）\n",
     "VOCAL_MIX_RATIO = 0.2\n",
     "\n",
@@ -158,7 +158,7 @@
     "# 备选示例：auto / en / zh / ja / ko / de / fr / es / ru / ar\n",
     "ASR_LANGUAGE = \"ja\"\n",
     "\n",
-    "# ASR 回退到原始混音（人声分离出现长空洞/提前结束时）\n",
+    "# ASR 回退：优先尝试人声+混音融合，其次原始混音\n",
     "ASR_FALLBACK_TO_MIX = True\n",
     "# 触发阈值：最大空洞 / 末尾缺失（秒）\n",
     "ASR_FALLBACK_MAX_GAP_SEC = 45\n",
@@ -174,10 +174,10 @@
     "SUBTITLE_FIX_LINGER = True  # True=启用“滞留修复”；False=完全按 ASR 原始时间轴输出\n",
     "SUBTITLE_MIN_DURATION_SEC = 1.2  # 单条字幕最短显示秒数（避免一闪而过）\n",
     "SUBTITLE_MAX_DURATION_SEC = 20.0  # 单条字幕最长显示秒数（用于限制长静音滞留）\n",
-    "SUBTITLE_CHARS_PER_SEC = 5.0  # 阅读速度估算：每秒字符数（越大越快->字幕更短）\n",
+    "SUBTITLE_CHARS_PER_SEC = 8.0  # 阅读速度估算：每秒字符数（越大越快->字幕更短）\n",
     "SUBTITLE_LINGER_SLACK_SEC = 0.8  # 容忍额外时长（秒），减少误判\n",
     "SUBTITLE_LINGER_TRIGGER_SEC = 10.0  # 仅当原始持续时间>=该值才考虑收缩\n",
-    "SUBTITLE_LINGER_TRIGGER_RATIO = 6.0  # 仅当 原始时长 > 可读时长*ratio 才触发（越大越不容易触发）\n",
+    "SUBTITLE_LINGER_TRIGGER_RATIO = 4.0  # 仅当 原始时长 > 可读时长*ratio 才触发（越大越不容易触发）\n",
     "SUBTITLE_LINGER_KEEP_RATIO = 4.0  # 触发后保留：可读时长*ratio（越大越不容易提前结束）\n",
     "\n",
     "config_text = f\"\"\"[API]\n",
@@ -217,7 +217,7 @@
     "transformers_chunk_sec = {ASR_TRANSFORMERS_CHUNK_SEC}\n",
     "transformers_stride_sec = {ASR_TRANSFORMERS_STRIDE_SEC}\n",
     "\n",
-    "# 人声分离回退：检测到长空洞/末尾缺失时，改用原始混音识别\n",
+    "# 人声分离回退：检测到长空洞/末尾缺失时，优先用人声+混音融合，其次原始混音\n",
     "fallback_to_mix = {str(ASR_FALLBACK_TO_MIX).lower()}\n",
     "fallback_max_gap_sec = {ASR_FALLBACK_MAX_GAP_SEC}\n",
     "fallback_end_diff_sec = {ASR_FALLBACK_END_DIFF_SEC}\n",
